# myp_proyecto_2

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/compiler/: Cargo.toml
crates/gui/: Cargo.toml
crates/miner/: Cargo.toml
crates/miner/src/: lib.rs
crates/miner/src/metadata/: track.rs
crates/miner/src/miner/: errors.rs  miner.rs  mod.rs  options.rs  result.rs
